--- a/app/views/levels/utility_classes.html.erb
+++ b/app/views/levels/utility_classes.html.erb
@@ -1,6 +1,24 @@
 
 <!-- Add utility classes and/or elements as needed to achieve the target appearance. -->
 
-<div>
+<div clas="d-flex justify-content-between">
+  <div class="d-flex">
+    <div class="bg-primary">
+      First
+    </div>
+
+    <div class="bg-warning">
+      Second
+    </div>
+
+    <div class="bg-success">
+      Third
+    </div>
+</div>
+</div>
+
+<div class="position-relative">
+<div class="shadow p-3 mb-5 bg-body rounded border-start border-info">
   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel ad debitis iste minima molestiae repellat magni? Voluptas, odit voluptate quasi esse ea iure quibusdam error at architecto veritatis, beatae nihil?
+</div>
 </div>
